# ift2425

./: Cargo.toml  README.md
TP2/: Tp2-IFT2425.c  bareme.txt
docs/: CNAME  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/search.desc/utils/: utils-desc-0-.js
docs/src/utils/: cse.rs.html  derivation.rs.html  differential_equations.rs.html  error_propagation.rs.html  integration.rs.html  lib.rs.html  (+6 more)
docs/utils/: all.html  index.html  sidebar-items.js
src/: app.rs  modules.rs
src/modules/: math_eval.rs  placeholder.rs
tp1/: .clangd  .gitignore  README.md  TP1-IFT2425-I.1  TP1-IFT2425-I.1.c  TP1-IFT2425-I.1.cpp  Tp-IFT2425-I.1.c  Tp-IFT2425-I.1.cpp  Tp-IFT2425-I.2.c  Tp-IFT2425-I.2.cpp  Tp-IFT2425-I.3.c  Tp-IFT2425-I.3.cpp  Tp-IFT2425-II.1.c  Tp-IFT2425-II.2.c  Tp-IFT2425-II.2.cpp  Tp-IFT2425-II.3.c  Tp-IFT2425-II.3.cpp  bareme.txt  compilegpp.sh  compilegpp.zsh  compilegpp_linux.sh  compilegpp_macos.sh
tp2/: .gitignore  README.md  Tp2-IFT2425.c  bareme.txt
tp3/: .gitignore  TP3-IFT2425-I.c  TP3-IFT2425-II.c  TP3-IFT2425-III.c  bareme.txt
tp4/: .gitignore  README.md  TP4-IFT2425-1.c  TP4-IFT2425-2.c  Tp4-Img-I.pgm  bareme.txt
tui/: Cargo.toml
tui/src/: app.rs  main.rs  modules.rs
tui/src/modules/: math_eval.rs  menu.rs  newton.rs  theme.rs
utils/: Cargo.toml  README.md  generate_doc.sh
utils/src/: bissection.rs  cse.rs  derivation.rs  error_propagation.rs  integration.rs  interpolation.rs  lib.rs  linear_systems.rs  main.rs  newton.rs  norms.rs  polynomial_interpolation.rs  root_search.rs  systems.rs  utils.rs
(+151 files in other folders)
